tests/fail/elaboration/unsolved/placeholder.snap
stdout = ''
stderr = '''
error: failed to infer placeholder expression
  ┌─ tests/fail/elaboration/unsolved/placeholder.fathom:3:1
  │
3 │ _
  │ ^ unsolved placeholder expression

'''
